# star_gate

./: README.md  pyproject.toml
src/star_gate/: __init__.py  stargate_module.py
src/star_gate/star/: star_parser.py  star_tokenizer.py
star_gate/: star_gate.py
star_gate/star/: star_common.py  star_parser.py
tests/: test_01_star_gate.py  test_02_create_star_file.py  test_03_table_star_gate.py  test_star_gate.py
tests/fixtures/: galaxy.star
